SERVER-62961  Fix ABT->SBE lowering of EvalFilter paths to correctly handle comparisons with arrays