jstests/cqf/match_with_in.js
@@ -22,14 +22,25 @@ const docs = [
     {_id: 8, a: {}},
     {_id: 9, a: {c: 1}},
     {_id: 10, a: [{c: 1}]},
-    {_id: 11, a: [[{c: 1}]]}
+    {_id: 11, a: [[{c: 1}]]},
+    {_id: 12, a: [[[1]]]},
 ];
 
 assert.commandWorked(coll.insert(docs));
 
 const runTest = (filter, expected) => {
-    const result = coll.aggregate({$match: filter}).toArray();
-    assertArrayEq({actual: result, expected: expected, extraErrorMsg: tojson({filter: filter})});
+    try {
+        // Disabled in order to exercise $in translation directly.
+        assert.commandWorked(db.adminCommand(
+            {'configureFailPoint': 'disablePipelineOptimization', 'mode': 'alwaysOn'}));
+
+        const result = coll.aggregate({$match: filter}).toArray();
+        assertArrayEq(
+            {actual: result, expected: expected, extraErrorMsg: tojson({filter: filter})});
+    } finally {
+        assert.commandWorked(
+            db.adminCommand({'configureFailPoint': 'disablePipelineOptimization', 'mode': 'off'}));
+    }
 };
 
 const tests = [
@@ -48,10 +59,13 @@ const tests = [
 
     // Test $in with $elemMatch.
     {filter: {a: {$elemMatch: {$in: [1, 2]}}}, expected: [docs[5]]},
+    {filter: {a: {$elemMatch: {$in: [[1]]}}}, expected: [docs[7]]},
+    {filter: {a: {$elemMatch: {$in: [[[1]]]}}}, expected: [docs[12]]},
 
-    // Test comparisons to arrays. TODO SERVER-62961: Enable these tests.
-    // {filter: {a: {$in: [[]]}}, expected: [docs[4]]},
-    // {filter: {a: {$in: [[1]]}}, expected: [docs[5], docs[7]]},
+    // Test comparisons to arrays.
+    {filter: {a: {$in: [[]]}}, expected: [docs[4]]},
+    {filter: {a: {$in: [[1]]}}, expected: [docs[5], docs[7]]},
+    {filter: {a: {$in: [[[1]]]}}, expected: [docs[7], docs[12]]},
 
     // Test comparison to objects.
     {filter: {a: {$in: [{}, {c: 1}]}}, expected: [docs[8], docs[9], docs[10]]},
@@ -60,7 +74,16 @@ const tests = [
     {filter: {a: {$in: [1, 2]}, 'b.c': {$in: [2, 3]}}, expected: [docs[3]]},
     {filter: {a: {$in: [1, 2]}, 'b.c': {$in: []}}, expected: []},
     {filter: {a: {$in: [1, 2]}, 'b.c': {$in: [null]}}, expected: [docs[5]]},
+
+    // Test $type.
+    {
+        filter: {a: {$type: "array"}},
+        expected: [docs[4], docs[5], docs[6], docs[7], docs[10], docs[11], docs[12]]
+    },
+    {filter: {a: {$type: "double"}}, expected: [docs[2], docs[3], docs[5]]},
+    {filter: {a: {$type: "object"}}, expected: [docs[8], docs[9], docs[10]]},
 ];
+
 for (const testData of tests) {
     runTest(testData.filter, testData.expected);
 }
